--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "jade": "~1.3.0",
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "awsbox": "~0.7.0"
   },
   "devDependencies": {},
   "scripts": {
