--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "jade": "~1.3.0",
-    "express": "~3.4.8",
+    "express": "~3.4.8"
+  },
+  "devDependencies": {
     "awsbox": "~0.7.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
